--- a/backend/package.json
+++ b/backend/package.json
@@ -17,11 +17,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.3.1",
-    "twilio": "^4.19.0",
-    "express": "^4.18.2",
     "body-parser": "^1.20.2",
-    "socket.io": "^4.7.2"
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "socket.io": "^4.7.2",
+    "twilio": "^4.19.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
