--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.8.1",
     "use-immer": "^0.11.0",
     "web-vitals": "^2.1.4"
   },
