--- a/backend/env.example
+++ b/backend/env.example
@@ -25,3 +25,10 @@ TWILIO_VERIFY_SERVICE=your_verify_service_sid_here
 # Optional: Additional Twilio settings
 # TWILIO_WEBHOOK_URL=https://your-domain.com/webhook
 # TWILIO_WORKSPACE_SID=your_workspace_sid_here
+
+# JWT Configuration
+# JWT Secret Key (change this in production!)
+JWT_SECRET=your-super-secret-jwt-key-change-in-production
+
+# JWT Token Expiration (default: 24h)
+JWT_EXPIRES_IN=24h
